fix: ds sidebar text align

--- a/src/components/nav-sidebar/nav-sidebar.scss
+++ b/src/components/nav-sidebar/nav-sidebar.scss
@@ -20,6 +20,9 @@
             padding: 0 24px;
             color: var(--color-primary) !important;
             width: 100%;
+            span span {
+              text-align:left;
+            }
             .icon {
               transition: transform .3s;
             }
